# lem-in

./: CMakeLists.txt  Makefile  author  broken_map  flow_ten  flow_thousand  map1  map2  map3  map4  pautinka.map
includes/: lem_in.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
maps/: 1.map  2.map  3.map  4.map  5.map  6.map  7.map  big_superposition.map
src/: algorithm.c  algorithm_extern.c  algorythm.c  error_exit.c  error_exit2.c  find_cross_ways.c  find_lines_of_answer.c  find_optimal_ways.c  main.c  map_validation.c  remove_same_edge.c  sortirovochka_dlya_algoritma_lol.c  struct.c  tools.c  tools2.c  tools3.c  tools4.c  tools5.c  validation.c  validation_2.c  validation_3.c  way_lock.c  way_parse.c
