cmake_minimum_required(VERSION 3.14)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(lib/includes)

add_executable(lem_in
        includes/lem_in.h
        includes/libft.h
        lib/includes/libft.h
        lib/src/ft_abs.c
        lib/src/ft_addnode.c
        lib/src/ft_addnode_dlist.c
        lib/src/ft_atoi.c
        lib/src/ft_bzero.c
        lib/src/ft_dlist_new.c
        lib/src/ft_dlistadd_end.c
        lib/src/ft_dlisthead_del.c
        lib/src/ft_free_dlist.c
        lib/src/ft_free_list.c
        lib/src/ft_isalnum.c
        lib/src/ft_isalpha.c
        lib/src/ft_isascii.c
        lib/src/ft_isdigit.c
        lib/src/ft_isprint.c
        lib/src/ft_itoa.c
        lib/src/ft_itoa_base.c
        lib/src/ft_lstadd.c
        lib/src/ft_lstadd_end.c
        lib/src/ft_lstdel.c
        lib/src/ft_lstdelone.c
        lib/src/ft_lsthead_del.c
        lib/src/ft_lstiter.c
        lib/src/ft_lstmap.c
        lib/src/ft_lstnew.c
        lib/src/ft_memalloc.c
        lib/src/ft_memccpy.c
        lib/src/ft_memchr.c
        lib/src/ft_memcmp.c
        lib/src/ft_memcpy.c
        lib/src/ft_memdel.c
        lib/src/ft_memmove.c
        lib/src/ft_memset.c
        lib/src/ft_putchar.c
        lib/src/ft_putchar_fd.c
        lib/src/ft_putendl.c
        lib/src/ft_putendl_fd.c
        lib/src/ft_putnbr.c
        lib/src/ft_putnbr_fd.c
        lib/src/ft_putstr.c
        lib/src/ft_putstr_fd.c
        lib/src/ft_rejoin.c
        lib/src/ft_search_helper.c
        lib/src/ft_strcat.c
        lib/src/ft_strchr.c
        lib/src/ft_strclr.c
        lib/src/ft_strcmp.c
        lib/src/ft_strcpy.c
        lib/src/ft_strdel.c
        lib/src/ft_strdup.c
        lib/src/ft_strequ.c
        lib/src/ft_striter.c
        lib/src/ft_striteri.c
        lib/src/ft_strjoin.c
        lib/src/ft_strjoin_free.c
        lib/src/ft_strjoin_free2.c
        lib/src/ft_strjoin_free_all.c
        lib/src/ft_strlcat.c
        lib/src/ft_strlen.c
        lib/src/ft_strlower.c
        lib/src/ft_strmap.c
        lib/src/ft_strmapi.c
        lib/src/ft_strncat.c
        lib/src/ft_strncmp.c
        lib/src/ft_strncpy.c
        lib/src/ft_strnequ.c
        lib/src/ft_strnew.c
        lib/src/ft_strnstr.c
        lib/src/ft_strrchr.c
        lib/src/ft_strset.c
        lib/src/ft_strsplit.c
        lib/src/ft_strstr.c
        lib/src/ft_strsub.c
        lib/src/ft_strtrim.c
        lib/src/ft_strupper.c
        lib/src/ft_tolower.c
        lib/src/ft_toupper.c
        lib/src/ft_unsigned_itoa.c
        lib/src/get_next_line.c
        src/main.c
        src/struct.c)
